Simplify KSplash

Summary:
Forking and printing a PID gains nothing.

The new startplasma script tracks the process used to start ksplash
itself.

BUG: 380495

Test Plan:
Logged in, saw a splash
Ran the test from systemsettings, saw a splash

Reviewers: #plasma, apol

Reviewed By: apol

Subscribers: apol, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21890